--- a/keyboardhookconsole/vcxproject/keyboardhookconsole.vcxproj.filters
+++ b/keyboardhookconsole/vcxproject/keyboardhookconsole.vcxproj.filters
@@ -7,8 +7,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\memory_search_pattern.cc">
+    <ClCompile Include="cheat_search_memory.cc">
       <Filter>source files</Filter>
     </ClCompile>
+    <ClCompile Include="..\main.cc">
+      <Filter>source files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cheat_search_memory.h">
+      <Filter>source files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
